--- a/main.css
+++ b/main.css
@@ -1,9 +1,103 @@
-body{
-    background-color: black;
+* {
+    box-sizing: border-box;
 }
 
-h1{
-    font-family: 'Trebuchet MS';
-    color: greenyellow;
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans';
+    height: 100%;
+    position: relative;
+    background-color: #edeeef;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
+
+.wrapper {
+    position: relative;
+    padding-bottom: 150px;
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+}
+
+main {
+    background-color: #edeeef;
+}
+
+header {
+    float: left;
+    color: white;   
+}
+
+.container-top {
+    width: 100%;
+    background-color: #26262a;
+    height: 100px;
+}
+
+nav {
+    float: right;  
+    font-size: 20px;  
+}
+
+.nav-item-current {
+    border-bottom: white 2px solid;    
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+nav a {
+    padding: 10px;
+    padding-bottom: 5px;
+}
+
+nav a:hover {
+    color: white;
+    /*text-decoration: underline;*/
+    border-bottom: white 2px solid;
+}
+
+footer {
+    background-color: #26262a;
+    /*height: 150px;*/
+    width: 100%;
+    color: white;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+}
+
+/*Sloupce*/
+.column {
+    float: left;
+    width: 50%;
+}
+
+main:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+/************/
+
+.title {
+    font-size: 50px;
+    padding: 15px;
+}
+
+.motto {
+    padding: 15px;
+    font-style: italic;   
+}
+
+.copyright {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
